--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -158,7 +158,7 @@
 }
 
 .font-family-primary {
-  font-family: "Heebo", sans-serif;
+  font-family: "Signika", sans-serif;
 }
 
 .font-family-playfair {
@@ -473,6 +473,7 @@ html, body {
 
 body {
   overflow-x: hidden;
+  background-color: #f9f9f4;
 }
 
 a {
@@ -1077,7 +1078,7 @@ pre {
 
 .breadcrumb .breadcrumb-item {
   display: inline-block;
-  font: 400 13px "Heebo", sans-serif;
+  font: 300 13px "Signika", sans-serif;
   letter-spacing: 1.5px;
   text-transform: uppercase;
 }
@@ -1164,13 +1165,13 @@ pre {
 }
 
 .btn, .button, .text-btn, .text-btn-2, .text-btn-3 {
-  font: 400 13px "Heebo", sans-serif;
+  font: 300 13px "Signika", sans-serif;
   letter-spacing: 1.5px;
   text-transform: uppercase;
 }
 
 .button-font-2 {
-  font: 400 15px "Heebo", sans-serif;
+  font: 300 15px "Signika", sans-serif;
   letter-spacing: 0;
   text-transform: capitalize;
 }
@@ -3039,7 +3040,7 @@ hr {
   margin-bottom: 10px;
   padding: 0;
   color: #141414;
-  font: 300 15px "Heebo", sans-serif;
+  font: 300 15px "Signika", sans-serif;
   letter-spacing: 0;
   text-transform: none;
   -webkit-transition: linear 0.1s;
@@ -4026,7 +4027,8 @@ ol li ul, ol li ol {
 }
 
 .navbar .navbar-brand img {
-  max-height: 40px;
+  /* max-height: 40px; */
+  width: 140px;
 }
 
 .navbar .navbar-brand h1, .navbar .navbar-brand h2, .navbar .navbar-brand h3, .navbar .navbar-brand h4, .navbar .navbar-brand h5, .navbar .navbar-brand h6 {
@@ -4037,7 +4039,7 @@ ol li ul, ol li ol {
   position: relative;
   padding: 0;
   color: #141414;
-  font: 400 13px "Heebo", sans-serif;
+  font: 300 13px "Signika", sans-serif;
   letter-spacing: 1.5px;
   text-transform: uppercase;
   -webkit-transition: linear 0.1s;
@@ -5370,7 +5372,7 @@ ol li ul, ol li ol {
 
 body {
   color: #646464;
-  font: 300 16px "Heebo", sans-serif;
+  font: 300 16px "Signika", sans-serif;
   letter-spacing: 0;
 }
 
@@ -5601,7 +5603,7 @@ i {
   background: #141414;
   padding: 10px 20px;
   color: #fff;
-  font: 400 13px "Heebo", sans-serif;
+  font: 300 13px "Signika", sans-serif;
   letter-spacing: 1.5px;
   text-transform: uppercase;
 }
@@ -7220,7 +7222,7 @@ button.mfp-close:hover {
   border-radius: 30px;
   margin-right: 10px;
   padding: 7px 15px;
-  font: 400 13px "Heebo", sans-serif;
+  font: 300 13px "Signika", sans-serif;
   letter-spacing: 1.5px;
   text-transform: uppercase;
   cursor: pointer;
@@ -8811,7 +8813,7 @@ body.loaded:after {
   position: relative;
   padding: 0;
   color: #141414;
-  font: 400 13px "Heebo", sans-serif;
+  font: 300 13px "Signika", sans-serif;
   letter-spacing: 1.5px;
   text-transform: uppercase;
   -webkit-transition: linear 0.1s;
@@ -10790,4 +10792,8 @@ body.loaded:after {
 
 .social {
   font-size: 30px;
+}
+
+.hero-logo {
+  width: 65%;
 }
